--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -2085,59 +2085,76 @@ form input[type=checkbox].ng-dirty:before {
 /*修改popover默认样式*/
 @media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031749}}
 .popover {
-  width: 150px;
+  width: 160px;
   background-color: transparent;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031752}}
-.popover .popover-content form .form-group {
+.popover .popover-inner {
+  color: #ffffff;
+  background: #333;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031755}}
+.popover .popover-inner h3 {
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 14px;
+  background: #333;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031761}}
+.popover .popover-inner .popover-content {
+  padding: 3px 15px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031763}}
+.popover .popover-inner .popover-content form .form-group {
   margin-bottom: 0px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031754}}
-.popover .popover-content form .form-group input[type='text'] {
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031765}}
+.popover .popover-inner .popover-content form .form-group label span {
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031770}}
+.popover .popover-inner .popover-content form .form-group input[type='text'] {
+  height: 30px;
   color: white;
   background: #333;
   text-indent: 5px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031761}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031776}}
+.popover .popover-inner .popover-content form .form-group .input-group-btn button {
+  padding: 4px 12px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031783}}
 .popover.bottom > .arrow:after {
+  top: 2px;
   opacity: 0.9;
   border-bottom-color: #333;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031765}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031788}}
 .fade.in {
   opacity: 0.9;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031768}}
-.popover-inner {
-  color: #ffffff;
-  background: #333;
-}
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031772}}
-.popover-inner h3 {
-  color: #ffffff;
-  font-weight: bold;
-  font-size: 12px;
-  background: #333;
-}
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031778}}
-.custom-popover {
+/*
+
+.custom-popover{
   padding-left: 6px;
+  input{
+    height: 28px;
+    color: white;
+    background: #333;
+    border: 1px solid #ccc;
+    text-indent: 5px;
+    border-radius: 5px;
+  }
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031780}}
-.custom-popover input {
-  height: 28px;
-  color: white;
-  background: #333;
-  border: 1px solid #ccc;
-  text-indent: 5px;
-  border-radius: 5px;
-}
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031789}}
+*/
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031807}}
 .fm-tab {
   padding: 0 5px;
   margin-bottom: 5px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031792}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031810}}
 .fm-tab a.tab {
   color: #ccc;
   font-weight: bold;
@@ -2147,11 +2164,11 @@ form input[type=checkbox].ng-dirty:before {
   text-align: center;
   background-color: #555555;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031800}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031818}}
 .fm-tab a.tab:hover {
   color: #fff;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031803}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031821}}
 .fm-tab a.tab.active {
   color: #fff;
   border-bottom: 1px solid rgba(255, 255, 255, 0.8);
@@ -2159,76 +2176,76 @@ form input[type=checkbox].ng-dirty:before {
   transition: all .3s;
 }
 /******************* 精编样式end *******************/
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031814}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031832}}
 .carousel-inner .item.active {
   text-align: center;
   margin: 0 auto;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031817}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031835}}
 .carousel-inner .item.active img {
   display: inline;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031821}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031839}}
 .pointer {
   cursor: pointer;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031824}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031842}}
 .fm-subtable-content {
   width: 100%;
   padding-left: 5px;
   padding-right: 5px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031829}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031847}}
 .fm-subtable-content table + div {
   position: fixed;
 }
 /*深度信息任务列表嵌套ul/li样式*/
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031834}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031852}}
 ul.fm-ul-insert {
   font-size: 14px;
   list-style: none;
   padding: 10px 0 0 15px;
   margin: 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031840}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031858}}
 ul.fm-ul-insert ul {
   list-style: none;
   padding-left: 25px;
   font-size: 12px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031845}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031863}}
 ul.fm-ul-insert ul li {
   padding: 5px 0 3px 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031848}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031866}}
 ul.fm-ul-insert > li {
   margin-bottom: 5px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031851}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031869}}
 .data-list-filter {
   position: absolute;
   top: 30px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031855}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031873}}
 .lane-top-container {
   color: #fff;
   padding: 10px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031860}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031878}}
 .lane-img-container {
   width: 50px;
   margin: 0 auto;
   position: relative;
   margin-right: auto !important;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031866}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031884}}
 .lane-img-container .roadside-left {
   height: 150px;
   width: 10px;
   background-color: #BEBEBE;
   float: left;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031872}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031890}}
 .lane-img-container .roadside-right {
   height: 150px;
   width: 10px;
@@ -2237,7 +2254,7 @@ ul.fm-ul-insert > li {
   border-left: 1px dashed #070707;
   border-right: 1px dashed #070707;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031880}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031898}}
 .lane-img-container .lane-driveway {
   width: 30px;
   height: 150px;
@@ -2250,27 +2267,27 @@ ul.fm-ul-insert > li {
   border-right: 1px dashed #fff;
   transition: all .3s;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031891}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031909}}
 .lane-img-container .lane-driveway.active {
   background-color: #49A7DA;
   box-shadow: 0 0 0 2px #49A7DA;
   z-index: 9;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031896}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031914}}
 .lane-img-container .lane-driveway .top {
   position: absolute;
   top: 0;
   width: 100%;
   text-align: center;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031902}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031920}}
 .lane-img-container .lane-driveway .middle {
   position: absolute;
   margin-top: 20px;
   background-color: #fff;
   cursor: pointer;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031908}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031926}}
 .lane-img-container .lane-driveway .bottom {
   width: 100%;
   text-align: center;
@@ -2278,7 +2295,7 @@ ul.fm-ul-insert > li {
   bottom: 0;
   position: absolute;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031917}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031935}}
 .lane-libs {
   list-style: none;
   float: left;
@@ -2286,12 +2303,12 @@ ul.fm-ul-insert > li {
   transition: all .3s;
   padding: 3px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031923}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031941}}
 .lane-libs.active {
   background-color: #fff;
   border-radius: 3px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031928}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031946}}
 input[type="range"] {
   -webkit-box-shadow: 0 1px 0 0px #424242, 0 1px 0 #060607 inset, 0px 2px 10px 0px #000000 inset, 1px 0px 2px rgba(0, 0, 0, 0.4) inset, 0 0px 1px rgba(0, 0, 0, 0.6) inset;
   margin-top: 2px;
@@ -2304,7 +2321,7 @@ input[type="range"] {
   z-index: 9;
   outline: none;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031940}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031958}}
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   cursor: default;
@@ -2317,24 +2334,24 @@ input[type="range"]::-webkit-slider-thumb {
   -webkit-box-shadow: 0 -1px 1px #000000 inset;
   transition: all .5s;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031952}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031970}}
 .range-min {
   position: absolute;
   top: -15px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031956}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031974}}
 .range-max {
   position: absolute;
   top: -15px;
   right: 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031961}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031979}}
 .input-addon-left {
   width: 150px !important;
   border-top-right-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031966}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/Code\/fastmap\/WebApp\/less\/editor\.less}line{font-family:\000031984}}
 .input-addon-right {
   border: 1px solid #fff;
   padding: 1px;
