--- a/less/editor.less
+++ b/less/editor.less
@@ -1759,7 +1759,7 @@ form input[type=checkbox].ng-dirty:before {
         background: #333;
       }
       .popover-content{
-          padding: 3px 15px;
+          padding: 0px 15px 10px 15px;
           form .form-group{
             margin-bottom: 0px;
             label span{
