--- a/scripts/components/column/tpls/englishName/photoEngNameTpl.html
+++ b/scripts/components/column/tpls/englishName/photoEngNameTpl.html
@@ -39,15 +39,15 @@
                     <div class="form-group" ng-repeat="item in costomWorkNumEum">
                         <div class="radio">
                             <label>
-                                <input type="radio" name="selectNum" id="optionsRadios1" ng-checked="selectedNum==item.num" ng-click="selectNum(item)"> <span ng-bind="item.desc"></span>
+                                <input type="radio" name="selectNum" id="optionsRadios1" ng-checked="selectedNum==item.num" ng-click="selectNum(item,$index)"> <span ng-bind="item.desc"></span>
                             </label>
                         </div>
                         <!--自定义输入框部分-->
-                        <div ng-if="(selectedNum==item.num)&&$last" class="input-group">
-                            <input class="form-control selectNumInput" ng-model="item.num" type="text" >
-                                <span class="input-group-btn">
-                                    <button ng-click="setInputValue(item.num)" class="btn btn-default" type="button">确认</button>
-                                </span>
+                        <div ng-if="inputIsShow&&$last" class="input-group">
+                            <input class="form-control" ng-model="item.num" type="text" />
+                            <span class="input-group-btn">
+                                <button ng-click="setInputValue(item.num)" class="btn btn-default" type="button">确认</button>
+                            </span>
                         </div>
                     </div>
                 </form>
