--- a/scripts/components/road/tpls/attr_link_tpl/rticOfCarTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/rticOfCarTpl.html
@@ -5,14 +5,14 @@
         <li class="list-group-item">
             <div><label class="control-label">RTIC代码</label></div>
             <div class="inline"><input style="width:148px;" type="text" ng-model="oridiData.code" readonly/>
-                    <span class="glyphicon glyphicon-plus" style="cursor: pointer;margin-left: 3px;color:#FFF;"></span>
+                    <span ng-click="addRticCode()" class="glyphicon glyphicon-plus" style="cursor: pointer;margin-left: 3px;color:#FFF;"></span>
             </div>
         </li>
         <li class="list-group-item">
             <div><label class="control-label" >RTIC等级</label></div>
             <div class="inline">
                 <select  ng-model="oridiData.rank"
-                         ng-options="value.id as value.label for value in rankoption">
+                         ng-options="value.id as value.label for value in rankoption" ng-change="changeRank()">
                     <option>--</option>
                 </select>
             </div>
