--- a/scripts/components/road/tpls/attr_link_tpl/rticOfIntTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/rticOfIntTpl.html
@@ -5,7 +5,7 @@
         <li class="list-group-item">
             <div><label class="control-label">RTIC代码</label></div>
             <div class="inline"><input style="width:148px;" type="text" ng-model="oridiData.code"/>
-                    <span ng-click="addRticCode()"  class="glyphicon glyphicon-plus" style="cursor: pointer;margin-left: 3px;color:#FFF;"></span>
+                    <span ng-click="addRticCode()" class="glyphicon glyphicon-plus" style="cursor: pointer;margin-left: 3px;color:#FFF;"></span>
             </div>
         </li>
         <li class="list-group-item">
@@ -19,18 +19,18 @@
         </li>
         <li class="list-group-item">
             <div><label class="control-label" >RTIC方向</label></div>
-            <div class="inline" ng-if="isupDirect==true">
-                <select  ng-model="oridiData.rticDr"
-                         ng-options="value.id as value.label for value in rticDroption" ng-change="changeDirect(oridiData.rticDr)">
+            <div class="inline">
+                <select  ng-model="oridiData.rticDir"
+                         ng-options="value.id as value.label for value in rticDroption">
                     <option>--</option>
                 </select>
             </div>
-            <div class="inline" ng-if="isupDirect==false">
-                <select disabled="disabled"  ng-model="oridiData.rticDr"
-                         ng-options="value.id as value.label for value in rticDroption" >
-                    <option>--</option>
-                </select>
-            </div>
+            <!--<div class="inline" ng-if="isupDirect==false">-->
+                <!--<select disabled="disabled"  ng-model="oridiData.rticDr"-->
+                         <!--ng-options="value.id as value.label for value in rticDroption" >-->
+                    <!--<option>&#45;&#45;</option>-->
+                <!--</select>-->
+            <!--</div>-->
         </li>
         <li class="list-group-item">
             <div><label class="control-label">上下行 标识</label></div>
