--- a/scripts/components/road/tpls/attr_lane_tpl/rdLaneTpl.html
+++ b/scripts/components/road/tpls/attr_lane_tpl/rdLaneTpl.html
@@ -9,39 +9,39 @@
             <label class="col-md-3">车道总数</label>
             <div class="col-md-9">
               <span class="range-min">0</span>
-              <input type="range" name="range" min="0" max="16" step="1" ng-model="laneLength" ng-change="changeCarLane();" tooltip-placement="top" uib-tooltip="{{laneData.length}}"/>
+              <input type="range" name="range" min="0" max="16" step="1" ng-model="laneLength" ng-change="changeCarLane();" tooltip-placement="top" uib-tooltip="{{clmData.laneInfos.length}}"/>
               <span class="range-max">16</span>
             </div>
           </div>
           <div class="lane-img-container" ng-style="laneStyle">
             <div class="roadside-left"></div>
-            <div class="lane-driveway" ng-class="{'lane-driveway animated-fast fadeInRight':true,'active':laneIndex == $index}" ng-repeat="item in laneData track by $index">
+            <div class="lane-driveway" ng-class="{'lane-driveway animated-fast fadeInRight':true,'active':laneIndex == $index}" ng-repeat="item in clmData.laneInfos track by $index">
               <span class="top">{{$index + 1}}</span>
-              <div class="middle" ng-click="showLaneDirect($event,$index,item);">
-                <img ng-src="../../../images/road/1301/1301_0_{{item}}.svg" />
+              <div class="middle" ng-click="showLaneDirect($event,$index,item.arrowDir);">
+                <img ng-src="../../../images/road/1301/1301_0_{{item.arrowDir}}.svg" style="width:30px;height:30px;"/>
               </div>
-              <span class="bottom" ng-click="removeLane($index);">
+              <span class="bottom" ng-click="removeLane($index);" ng-if="clmData.laneInfos.length!=1">
                 <i class="glyphicon glyphicon-remove"></i>
               </span>
             </div>
             <div class="roadside-left"></div>
           </div>
         </div>
-        <form name="rdGscForm" style="margin-top:60px;">
+        <form name="baseForm" style="margin-top:60px;">
             <div class="fm-panel">
                 <div class="content">
                     <ul class="fm-ul fm-ul-form">
                         <li>
                             <label>道路线</label>
                             <div>
-                                <input type="text" ng-model="clmData.linkPid"/>
+                                <input type="text" ng-model="laneInfo.pid" disabled/>
                             </div>
                         </li>
                         <li>
                             <label>中央隔离带</label>
                             <div>
-                                <select ng-model="clmData.centerDivider"
-                                        ng-options="value.id as value.label for value in centerDividerObj">
+                                <select ng-model="laneInfo.centerDivider"
+                                        ng-options="value.id as value.label for value in laneDividerObj">
                                 </select>
                             </div>
                         </li>
@@ -56,90 +56,63 @@
                         <li>
                             <label>车道标识</label>
                             <div>
-                                <input type="text" ng-model="clmData.laneForming"/>
+                                <input type="text" ng-model="laneInfo.laneForming"/>
                             </div>
                         </li>
                         <li>
                             <label>车道类型</label>
                             <div>
-                                <select ng-model="clmData.centerDivider"
-                                        ng-options="value.id as value.label for value in centerDividerObj">
+                                <select ng-model="laneInfo.laneType"
+                                        ng-options="value.id as value.label for value in laneTypeObj">
                                 </select>
                             </div>
                         </li>
                         <li>
                             <label>车道限宽</label>
                             <div>
-                                <input type="text" ng-model="clmData.linkPid" class="input-addon-left"/>
+                                <input type="text" ng-model="laneInfo.width" class="input-addon-left"/>
                                 <span class="input-addon-right"> 米 </span>
                             </div>
                         </li>
                         <li>
                             <label>车道限高</label>
                             <div>
-                                <input type="text" ng-model="clmData.linkPid" class="input-addon-left"/>
+                                <input type="text" ng-model="laneInfo.restrictHeight" class="input-addon-left"/>
                                 <span class="input-addon-right"> 米 </span>
                             </div>
                         </li>
                         <li>
                             <label>车道限速</label>
                             <div>
-                                <input type="text" ng-model="clmData.linkPid"/>
+                                <input type="text" ng-if="clmData.laneDir == 2" ng-model="laneInfo.fromMaxSpeed"/>
+                                <input type="text" ng-if="clmData.laneDir == 3" ng-model="laneInfo.toMaxSpeed"/>
                             </div>
                         </li>
                         <li>
                             <label>车道隔离带</label>
                             <div>
-                                <select ng-model="clmData.laneDivider"
+                                <select ng-model="laneInfo.laneDivider"
                                         ng-options="value.id as value.label for value in laneDividerObj">
                                 </select>
                             </div>
                         </li>
-                        <li>
-                            <label>车道方向</label>
-                            <div>
-                                <label>
-                                  <input type="radio" ng-model="clmData.laneDir" name="laneDirGroup"/> 无
-                                </label>
-                                <label>
-                                  <input type="radio" ng-model="clmData.laneDir" name="laneDirGroup"/> 顺
-                                </label>
-                                <label>
-                                  <input type="radio" ng-model="clmData.laneDir" name="laneDirGroup"/> 逆
-                                </label>
-                            </div>
-                        </li>
-                        <li>
-                            <label>车道时间段</label>
-                            <div>
-                                <input type="text" ng-model="clmData.directionTime"/>
-                            </div>
-                        </li>
-                        <li>
-                            <label>车辆类型</label>
-                            <div>
-                                <input type="text" ng-model="clmData.vehicle"/>
-                            </div>
-                        </li>
-                        <li>
-                            <label>车辆时间段</label>
-                            <div>
-                                <input type="text" ng-model="clmData.vehicleTime"/>
-                            </div>
-                        </li>
                     </ul>
                 </div>
+            </div>
+        </form>
+        <form name="detailForm">
+            <div class="fm-panel">
                 <div class="content">
                     <ul class="list-group list-group-lg m-b-none">
                         <li class="list-group-item">
                             <div class="list-name">
-                                <a ng-click="addItem('name')" class="fm-cursor">车道（共 {{clmData.conditions.length}} 条）</a>
+                                <a ng-click="addItem()" class="fm-cursor">车道（共 {{clmData.laneInfos[laneIndex].conditions.length}} 条）</a>
                             </div>
                             <div class="list-line"></div>
                         </li>
-                        <li class="list-group-item" ng-repeat="lanesItem in conditions.lanes">
-                            <label class="control-label fm-cursor" ng-click="showDetail('lane',$index);" ng-bind="lanesItem.lane"></label>
-                            <i class="glyphicon glyphicon-remove-circle" ng-click="removeItem($index,'lane')"></i>
+                        <li class="list-group-item" ng-repeat="lanesItem in clmData.laneInfos[laneIndex].conditions">
+                            <label class="control-label fm-cursor" ng-click="showDetail($index);" ng-bind="lanesItem.lanePid"></label>
+                            <i class="glyphicon glyphicon-remove-circle" ng-click="removeItem($index)"></i>
                         </li>
                     </ul>
                 </div>
