--- a/scripts/components/column/tpls/chinaName/nameUnifyTpl.html
+++ b/scripts/components/column/tpls/chinaName/nameUnifyTpl.html
@@ -48,50 +48,51 @@
 			</div>
 			<!-- 批量作业 -->
 			<div ng-show="batchWorkIsOpen">
-					<div class="div-float" style="top:80px;left:120px;border-radius:5px;">
-				        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeBatchModal()"><span>&times;</span></button>
-				        <div class="fm-panel" style="margin:0px;width:330px;">
-				        <!-- <div style="border-bottom: 1px solid #ddd;"></div> -->
-						    <div class="fm-tabs" style="padding:0px;margin: 0px;">
-								<a href="#" class="tab" ng-class="{1:'active'}[batchFlag]" ng-click="batchTabs(1)">替换</a>
-								<a href="#" class="tab" ng-class="{2:'active'}[batchFlag]" ng-click="batchTabs(2)">高级搜索</a>
-							</div>
-						    <div class="content" >
-						        <div style="height:200px;">
-									<ul class="fm-ul fm-ul-form">
-						                <li>
-						                    <label>字段:</label>
-						                    <div>
-						                    	<select class="fm-control"  style="width:200px;" ng-model="batchParam.batchField"
-						                                placeholder_text_single="'--请选择--'"
-						                                ng-options="value.id as value.label for value in batchOpt"
-						                                ng-change="changeField($event, this)">
-						                        </select>
-						                    </div>
-						                </li>
-						                <li>
-						                    <label>搜索:</label>
-						                    <div>
-						                    	<input type="text" class="fm-control" style="width:200px;" ng-model="batchParam.value">
-						                    </div>
-						                </li>
-						                <li ng-show="extractEle">
-						                    <label>替换为:</label>
-						                    <div>
-						                    	<input type="text" class="fm-control" style="width:200px;" ng-model="admin">
-						                    </div>
-						                </li>
-						            </ul>
-						        </div>
-						    </div>
-						    <div style="border-bottom: 1px solid #ddd;"></div>
-						    <div style="text-align:right;">
-							    <button type="button" class="btn btn-main" ng-click="cancle()" style="margin:6px 8px">取消</button>
-							    <button type="button" class="btn btn-main" ng-show="extractEle" ng-click="extractData()" style="margin:6px 8px">提取数据</button>
-						        <button type="button" class="btn btn-main" ng-show="searchBtn" ng-click="searchWork()" style="margin:6px 8px">搜索作业</button>
-						    </div>
+				<div class="div-float" style="top:80px;left:120px;border-radius:5px;" drag>
+			        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeBatchModal()"><span>&times;</span></button>
+			        <button type="button"  drag-handle class="close fa fa-arrows" style="padding:7px;font-size:16px;color:white;opacity:1;" title="拖拽"></button>
+			        <div class="fm-panel" style="margin:0px;width:330px;">
+			        <!-- <div style="border-bottom: 1px solid #ddd;"></div> -->
+					    <div class="fm-tab" style="padding:0px;margin: 0px;">
+							<a href="#" class="tab" ng-class="{1:'active'}[batchFlag]" ng-click="batchTabs(1)">&nbsp;&nbsp;替换&nbsp;&nbsp;</a>
+							<a href="#" class="tab" ng-class="{2:'active'}[batchFlag]" ng-click="batchTabs(2)">高级搜索</a>
 						</div>
-				    </div>
+					    <div class="content" >
+					        <div style="height:200px;">
+								<ul class="fm-ul fm-ul-form">
+					                <li>
+					                    <label>字段:</label>
+					                    <div>
+					                    	<select class="fm-control"  style="width:200px;" ng-model="batchParam.batchField"
+					                                placeholder_text_single="'--请选择--'"
+					                                ng-options="value.id as value.label for value in batchOpt"
+					                                ng-change="changeField($event, this)">
+					                        </select>
+					                    </div>
+					                </li>
+					                <li>
+					                    <label>搜索:</label>
+					                    <div>
+					                    	<input type="text" class="fm-control" style="width:200px;" ng-model="batchParam.value">
+					                    </div>
+					                </li>
+					                <li ng-show="extractEle">
+					                    <label>替换为:</label>
+					                    <div>
+					                    	<input type="text" class="fm-control" style="width:200px;" ng-model="admin">
+					                    </div>
+					                </li>
+					            </ul>
+					        </div>
+					    </div>
+					    <div style="border-bottom: 1px solid #ddd;"></div>
+					    <div style="text-align:right;">
+						    <button type="button" class="btn btn-main" ng-click="cancle()" style="margin:6px 8px">取消</button>
+						    <button type="button" class="btn btn-main" ng-show="extractEle" ng-click="extractData()" style="margin:6px 8px">提取数据</button>
+					        <button type="button" class="btn btn-main" ng-show="searchBtn" ng-click="searchWork()" style="margin:6px 8px">搜索作业</button>
+					    </div>
+					</div>
+			    </div>
 			</div>
 		</div>
 	<!-- </div> -->
@@ -101,12 +102,15 @@
 			<div class="title">
 				<span style="cursor: pointer">名称统一</span>
 				<button type="button" class="close" ng-click="closeEditPanel()" style="color: white;opacity: 1;margin: -4px 0px;"><span>&times;</span></button>
+				<span class="pull-right" style="padding-right: 10px;">
+					<i class="fa fa fa-file-text-o fa-lg pointer wordColorWhite" title="批量作业" ng-click="editBatchWord()"></i>
+				</span>
 			</div>
 			<div>
 				<div class="fm-fitsize dark scroll-styled tablePosition" style="top:30px;color: white;">
-					<table ng-table-dynamic="editorTable with editor.editorCols" class="table table-condensed table-bordered poi-list">
+					<table ng-table-dynamic="editTable with edit.editCols" class="table table-condensed table-bordered poi-list">
 						<colgroup>
-							<col ng-repeat="col in editor.editorCols | filter:{show: true}"  width="{{col.width || '50'}}"/>
+							<col ng-repeat="col in edit.editCols | filter:{show: true}"  width="{{col.width || '50'}}"/>
 						</colgroup>
 						<tr ng-repeat="row in $data">
 							<td ng-repeat="col in $columns">
@@ -114,7 +118,7 @@
 								<span ng-if="col.html" fm-bind-compiled-html="col.getValue(this, row)"></span>
 							</td>
 						</tr>
-						<tr class="text-center" ng-show="!$data.length"><td colspan="{{(editor.editorCols | filter: {show: true}).length}}" ng-bind="loadTableDataMsg"></td></tr>
+						<tr class="text-center" ng-show="!$data.length"><td colspan="{{(edit.editCols | filter: {show: true}).length}}" ng-bind="loadTableDataMsg"></td></tr>
 					</table>
 				</div>
 			</div>
@@ -124,7 +128,7 @@
 		</div>
 		<!-- 编辑界面弹出层 -->
 		<div class="div-float" ng-show="showImgInfoo" drag style="height: 400px;width: 700px;">
-			<div class="fm-panel"  >
+			<div class="fm-panel">
 				<div class="title">
 					<span style="cursor: pointer">详细信息</span>
 					<span class="toolRight">
@@ -193,6 +197,50 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<!-- 编辑界面批量作业 -->
+	    <div ng-show="editBatchWorkIsOpen">
+			<div class="div-float" style="top:80px;left:120px;border-radius:5px;" drag>
+		        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeEditBatchModal()"><span>&times;</span></button>
+		        <button type="button"  drag-handle class="close fa fa-arrows" style="padding:7px;font-size:16px;color:white;opacity:1;" title="拖拽"></button>
+		        <div class="fm-panel" style="margin:0px;width:330px;">
+				    <div class="title">批量作业</div>
+				    <div class="content" >
+				        <div style="height:200px;">
+							<ul class="fm-ul fm-ul-form">
+				                <li>
+				                    <label>字段:</label>
+				                    <div>
+				                    	<select class="fm-control"  style="width:200px;" ng-model="batchParam.batchField"
+				                                placeholder_text_single="'--请选择--'"
+				                                ng-options="value.id as value.label for value in replaceOpt"
+				                                ng-change="changeField($event, this)">
+				                        </select>
+				                    </div>
+				                </li>
+				                <li>
+				                    <label>搜索:</label>
+				                    <div>
+				                    	<input type="text" class="fm-control" style="width:200px;" ng-model="batchParam.value">
+				                    </div>
+				                </li>
+				                <li>
+				                    <label>替换为:</label>
+				                    <div>
+				                    	<input type="text" class="fm-control" style="width:200px;" ng-model="admin">
+				                    </div>
+				                </li>
+				            </ul>
+				        </div>
+				    </div>
+				    <div style="border-bottom: 1px solid #ddd;"></div>
+				    <div style="text-align:right;">
+					    <button type="button" class="btn btn-main" ng-click="next()" style="margin:6px 8px">下一个</button>
+					    <button type="button" class="btn btn-main" ng-click="replaceOne()" style="margin:6px 8px">替换</button>
+				        <button type="button" class="btn btn-main" ng-click="replaceAll()" style="margin:6px 8px">全部替换</button>
+				    </div>
+				</div>
+		    </div>
 		</div>
 	</div>
 </div>
