详细车道编辑和删除

--- a/scripts/components/tools/fmTimeComponent/fmdateTimer.html
+++ b/scripts/components/tools/fmTimeComponent/fmdateTimer.html
@@ -413,9 +413,9 @@
         </div>
         <div class="clearfix"></div>
     </div>
-    <div class="date-body">
+    <div class="date-body col-md-12">
         <div class="date-list"></div>
-        <div class="date-list" ng-repeat="item in dateList">
+        <div class="date-list col-md-12" ng-repeat="item in dateList">
             <div class="col-xs-10 col-md-10 col-lg-11 date-code-list" date-code="{{item.code}}" ng-bind="item.describe">
             </div>
             <div class="col-xs-2 col-md-2 col-lg-1">
