--- a/less/editor.less
+++ b/less/editor.less
@@ -1992,3 +1992,13 @@ input[type="range"]::-webkit-slider-thumb {
   border-bottom-right-radius: 4px;
   background-color: #504E4E;
 }
+// 时间段title
+.date-time-title{
+  margin: 0;
+  border: 1px solid;
+  padding: 3px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  margin-bottom: -7px !important;
+  width: 100% !important;
+}
